--- a/1-Natours/sass/base/_typography.scss
+++ b/1-Natours/sass/base/_typography.scss
@@ -33,3 +33,21 @@ body {
     animation-timing-function: cubic-bezier(0.64, 0.03, 0.52, 1);
   }
 }
+
+.heading-secondary{
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 0.2rem;
+  transition: all 0.2s;
+
+  &:hover{
+    background-image: linear-gradient(to right, $color-primary-dark, $color-primary-light);
+    transform: scale(1.1);
+  }
+}
