about section wrap up

--- a/1-Natours/sass/base/_utilities.scss
+++ b/1-Natours/sass/base/_utilities.scss
@@ -1,8 +1,7 @@
-// Center align
-.u-center-text{
-  text-align: center
-}
+// Text align
+.u-center-text { text-align: center; }
 
-.u-margin-bottom-8{
-  margin-bottom: 8rem;
-}
+// Text margins
+.u-margin-bottom-small { margin-bottom: 1.5rem; }
+.u-margin-bottom-medium { margin-bottom: 4rem; }
+.u-margin-bottom-large { margin-bottom: 8rem; }
