--- a/1-Natours/sass/base/_typography.scss
+++ b/1-Natours/sass/base/_typography.scss
@@ -51,3 +51,17 @@ body {
     transform: scale(1.1);
   }
 }
+
+.heading-tertiary{
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph{
+  font-size: $default-font-size;
+
+  &:not(:last-child){
+    margin-bottom: 3rem;
+  }
+}
