--- a/1-Natours/sass/main.scss
+++ b/1-Natours/sass/main.scss
@@ -10,7 +10,8 @@
 @import 'base/utilities';
 
 // Components
-@import 'components/button';
+@import 'components/buttons';
+@import 'components/composition';
 
 // Layouts
 @import 'layout/grid';
