--- a/1-Natours/sass/base/_typography.scss
+++ b/1-Natours/sass/base/_typography.scss
@@ -38,12 +38,8 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
-  display: inline-block;
-  background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
   letter-spacing: 0.2rem;
+  @include text-gradient($color-primary-light, $color-primary-dark);
   transition: all 0.2s;
 
   &:hover{
