--- a/1-Natours/sass/main.scss
+++ b/1-Natours/sass/main.scss
@@ -12,6 +12,7 @@
 // Components
 @import 'components/buttons';
 @import 'components/composition';
+@import 'components/feature-box';
 
 // Layouts
 @import 'layout/grid';
