--- a/1-Natours/sass/base/_utilities.scss
+++ b/1-Natours/sass/base/_utilities.scss
@@ -2,6 +2,7 @@
 .u-center-text { text-align: center; }
 
 // Text margins
+.u-margin-top-xlarge { margin-top: 10rem; }
 .u-margin-bottom-small { margin-bottom: 1.5rem; }
 .u-margin-bottom-medium { margin-bottom: 4rem; }
 .u-margin-bottom-large { margin-bottom: 8rem; }
