--- a/1-Natours/sass/components/_composition.scss
+++ b/1-Natours/sass/components/_composition.scss
@@ -3,7 +3,7 @@
 
   &__photo {
     width: 55%;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+    @include box-shadow;
     border-radius: 3px;
     position: absolute;
     transition: all 0.2s;
