--- a/1-Natours/sass/main.scss
+++ b/1-Natours/sass/main.scss
@@ -11,6 +11,7 @@
 
 // Components
 @import 'components/buttons';
+@import 'components/card';
 @import 'components/composition';
 @import 'components/feature-box';
 
