--- a/1-Natours/sass/components/_buttons.scss
+++ b/1-Natours/sass/components/_buttons.scss
@@ -29,21 +29,11 @@
   }
   
   &--white {
-    background-color: $color-white;
-    color: $color-grey-dark;
-
-    &::after {
-      background-color: $color-white;
-    }
+    @include rounded-button($color-white, $color-grey-dark);
   }
 
   &--green {
-    background-color: $color-primary;
-    color: $color-white;
-
-    &::after {
-      background-color: $color-primary;
-    }
+    @include rounded-button($color-primary, $color-white);
   }
   
   &::after {
