--- a/1-Natours/sass/main.scss
+++ b/1-Natours/sass/main.scss
@@ -10,10 +10,12 @@
 @import 'base/utilities';
 
 // Components
+@import 'components/bg-video';
 @import 'components/buttons';
 @import 'components/card';
 @import 'components/composition';
 @import 'components/feature-box';
+@import 'components/story';
 
 // Layouts
 @import 'layout/grid';
