--- a/1-Natours/sass/components/_buttons.scss
+++ b/1-Natours/sass/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn{
-
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -11,6 +11,10 @@
     backface-visibility: hidden;
     position: relative;
     font-size: $default-font-size;
+
+    // Change for the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -23,7 +27,9 @@
     }
   }
   
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1px);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
