--- a/1-Natours/sass/main.scss
+++ b/1-Natours/sass/main.scss
@@ -22,6 +22,7 @@
 @import 'layout/footer';
 @import 'layout/grid';
 @import 'layout/header';
+@import 'layout/navigation';
 
 // Pages
 @import 'pages/home';
