--- a/1-Natours/sass/components/_popup.scss
+++ b/1-Natours/sass/components/_popup.scss
@@ -6,18 +6,23 @@
   left: 0;
   background-color: rgba($color-black, .8);
   z-index: 1010;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .4s;
 
   &__content {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(.25);
     width: 75%;
     background-color: $color-white;
     @include box-shadow;
     border-radius: 3px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transition: all .5s .2s;
   }
 
   &__left {
@@ -43,5 +48,34 @@
     column-gap: 4rem;
     column-rule: 1px solid $color-grey-light-2;
     margin-bottom: 3rem;
+  }
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: inherit;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3.5rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all .4s;
+      line-height: 1;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
