--- a/1-Natours/sass/base/_typography.scss
+++ b/1-Natours/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   /* font-size: 16px; */
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -21,6 +20,11 @@ body {
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: cubic-bezier(0.64, 0.03, 0.52, 1);
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
   
   &--sub {
@@ -31,6 +35,10 @@ body {
     animation-name: moveInRight;
     animation-duration: 1s;
     animation-timing-function: cubic-bezier(0.64, 0.03, 0.52, 1);
+
+    @include respond(phone) {
+      letter-spacing: .5rem;
+    }
   }
 }
 
@@ -41,6 +49,14 @@ body {
   letter-spacing: 0.2rem;
   @include text-gradient($color-primary-light, $color-primary-dark);
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover{
     background-image: linear-gradient(to right, $color-primary-dark, $color-primary-light);
