--- a/1-Natours/sass/components/_composition.scss
+++ b/1-Natours/sass/components/_composition.scss
@@ -8,19 +8,38 @@
     position: absolute;
     transition: all 0.2s;
 
+    @include respond(tab-port) {
+      float: left;
+      position: relative;
+      width: 33.33%;
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
+
+      @include respond(tab-port) {
+        top: 0;
+      }
     }
 
     &--p2 {
       right: 0;
       top: 2rem;
+
+      @include respond(tab-port) {
+        top: 0;
+      }
     }
 
     &--p3 {
       left: 20%;
       top: 10rem;
+
+      @include respond(tab-port) {
+        top: 0;
+        left: 0;
+      }
     }
 
     &:hover {
