--- a/1-Natours/sass/components/_form.scss
+++ b/1-Natours/sass/components/_form.scss
@@ -49,6 +49,12 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+
+    @include respond(tab-port) {
+      display: block;
+      text-align: left;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
