--- a/1-Natours/sass/layout/_footer.scss
+++ b/1-Natours/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
   font-size: 1.4rem;
   color: $color-grey-dark-2;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 5.5rem;
+    }
   }
 
   &__logo {
@@ -16,6 +24,11 @@
 
   &__navigation {
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -48,5 +61,9 @@
 
   &__copyright {
     text-align: right;
+
+    @include respond(tab-port) {
+      text-align: center;
+    }
   }
 }
