--- a/1-Natours/sass/layout/_navigation.scss
+++ b/1-Natours/sass/layout/_navigation.scss
@@ -14,6 +14,11 @@
     z-index: 1001;
     @include box-shadow;
     cursor: pointer;
+
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
   }
 
   &__background {
@@ -30,6 +35,11 @@
     z-index: 999;
     transition: transform .8s cubic-bezier(0.86,0,0.07,1);
     // transform: scale(80);
+
+    @include respond(tab-port) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
   }
 
   &__nav {
