--- a/1-Natours/sass/pages/_home.scss
+++ b/1-Natours/sass/pages/_home.scss
@@ -1,7 +1,11 @@
 .section-about {
   background-color: $color-grey-light-1;
-  padding: 25rem;
+  padding: 25rem 10rem;
   margin-top: -20vh;
+
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -19,12 +23,20 @@
   & > *{
     transform: skewY(6deg);
   }
+
+  @include respond(tab-port) {
+    padding: 15rem 0;
+  }
 }
 
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+
+  @include respond(tab-port) {
+    padding: 15rem 0 8rem 0;
+  }
 }
 
 .section-stories {
@@ -52,10 +64,36 @@
   background-size: cover;
   border-radius: 3px; 
   @include box-shadow;
-  height: 50rem;
+  // height: 50rem;
+
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+      105deg,
+      rgba($color-white, .9) 0%, 
+      rgba($color-white, .9) 65%, 
+      transparent 65%), 
+      url(../img/nat-10.jpg);
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+      105deg,
+      rgba($color-white, .9) 0%, 
+      rgba($color-white, .9) 100%, 
+      transparent 100%), 
+      url(../img/nat-10.jpg);
+  }
 
   &__form {
     width: 50%;
-    padding: 6rem;
+    padding: 5rem;
+
+    @include respond(tab-land) {
+      width: 65%;
+    }
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 }
